fixes spacing around LinkingWord in ConditionText

--- a/src/components/atoms/ConditionText/ConditionText.css
+++ b/src/components/atoms/ConditionText/ConditionText.css
@@ -1,3 +1,7 @@
 .ConditionText{
     margin: 0;
 }
+
+.ConditionText-LinkingWord{
+    margin: 0 1.1rem 0 0.75rem;
+}
